Fix broken css import

--- a/src/style.css
+++ b/src/style.css
@@ -71,7 +71,7 @@ i {
   justify-content: center;
 }
 
-.fa-check-double {
+.fa-apple {
   font-size: 40px;
 }
 
@@ -462,7 +462,6 @@ i {
     border-radius: 0px;
     width: 100%;
     height: 100vh;
-    background-color: black;
   }
 
   .right-task-panel {
